# wisp_shell

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  COMMERCIAL.md  CONTRIBUTING.md  Cargo.toml  README.md  TASK.md  WispShell_Codex_Handoff.md  docker-compose.yml  justfile
.github/workflows/: android-device.yml  ci.yml  google-play.yml
components/agent/: Cargo.toml
components/agent/src/: cloud_client.rs  config.rs  device.rs  main.rs  pairing.rs  pty.rs  session.rs  state.rs  systemd.rs  transport_iroh.rs  transport_local.rs  transport_stream.rs
components/android/: DEVICE_CI.md  PLAY_RELEASE.md  settings.gradle.kts
components/android/app/: build.gradle.kts
components/android/app/src/main/: AndroidManifest.xml
components/android/app/src/main/assets/terminal/: index.html  xterm.css  xterm.js
components/android/app/src/main/java/com/biplabs/wisp/: MainActivity.kt
components/android/app/src/main/java/com/biplabs/wisp/bridge/: WispNative.kt
components/android/app/src/main/java/com/biplabs/wisp/data/: WispModels.kt  WispRepository.kt
components/android/app/src/main/java/com/biplabs/wisp/terminal/: NativeP2pTerminalConnection.kt  TerminalConnection.kt  WispTerminalConnection.kt  WispTerminalWebView.kt  WispTermuxTerminalView.kt
components/android/app/src/main/java/com/biplabs/wisp/ui/: DeviceListScreen.kt  PairScreen.kt  SettingsScreen.kt  TerminalScreen.kt
components/android/app/src/main/java/dev/wispshell/app/: MainActivity.kt
components/android/app/src/main/java/dev/wispshell/app/bridge/: WispNative.kt
components/android/app/src/main/java/dev/wispshell/app/data/: WispModels.kt  WispRepository.kt
components/android/app/src/main/java/dev/wispshell/app/terminal/: NativeP2pTerminalConnection.kt  TerminalConnection.kt  WispTerminalConnection.kt  WispTerminalWebView.kt  WispTermuxTerminalView.kt
components/android/app/src/main/java/dev/wispshell/app/ui/: DeviceListScreen.kt  PairScreen.kt  SettingsScreen.kt  TerminalScreen.kt
components/android/app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_launcher_monochrome.xml
components/android/app/src/main/res/values/: styles.xml
components/cloud/: Cargo.toml
components/cloud/src/: auth_device.rs  db.rs  devices.rs  main.rs  pairing.rs  presence.rs  rendezvous.rs  routes.rs  ws.rs
crates/wispshell-core/: Cargo.toml
crates/wispshell-core/src/: android_jni.rs  client.rs  ffi.rs  ffi.udl  lib.rs  pairing.rs  terminal.rs
crates/wispshell-protocol/: Cargo.toml
crates/wispshell-protocol/src/: crypto.rs  lib.rs  messages.rs  pairing_code.rs  signing.rs
deploy/desktop-home/: Caddyfile  wispshell-cloud.service  wispshell-relay.service
