[workspace]
members = [
    "crates/wispshell-protocol",
    "crates/wispshell-core",
    "components/agent",
    "components/cloud",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "AGPL-3.0-only"
repository = "https://github.com/biplabs/wisp_shell"

[workspace.dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
ed25519-dalek = { version = "2", features = ["rand_core"] }
futures-util = "0.3"
hmac = "0.12"
iroh = "0.98"
jni21 = { package = "jni", version = "0.21" }
ndk-context = "0.1"
portable-pty = "0.9"
qrcode = "0.14"
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["compat"] }
tower-http = { version = "0.6", features = ["trace"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
url = "2"
urlencoding = "2"
wispshell-protocol = { path = "crates/wispshell-protocol" }
