[package]
name = "wispshell-agent"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "wispshelld"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
directories.workspace = true
iroh.workspace = true
portable-pty.workspace = true
qrcode.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
urlencoding.workspace = true
uuid.workspace = true
wispshell-protocol.workspace = true
