[package]
name = "wispshell-core"
version = "0.1.0"
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow.workspace = true
chrono.workspace = true
base64.workspace = true
iroh.workspace = true
jni21.workspace = true
ndk-context.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
url.workspace = true
urlencoding.workspace = true
wispshell-protocol.workspace = true
