[package]
name = "wispshell-protocol"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
ed25519-dalek.workspace = true
hmac.workspace = true
rand.workspace = true
rand_core.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
uuid.workspace = true
